# chainer-handson

./: .gitignore  14. Chainer の基礎.ipynb  README.md  chainer講義.ipynb  cupyのテスト.ipynb  gpu_test.ipynb  keiba.ipynb  pyproject.toml
bento/: bento.ipynb  my_iris.net
titanic/: Kaggleで勝つ本.ipynb  Titanic Data Solution with Random Forest.ipynb  chainer.ipynb  my_titanic.model  scikit-learn.ipynb  titanic.ipynb
