[tool.poetry]
name = "chainer-cupy"
version = "0.1.0"
description = ""
authors = ["Toshiya Takeshita <toshi@atbat.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
